# SFML-IGL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: ci.yml
